- Windows only: Add UI-checkbox for R's "internet2"-option
- New functions getString(), getList() and getBoolean() for fetching data in plugin scripts		TODO: more testing, convert at least some plugins
- Boolean properties now return a numeric, not labelled representation of their value, by default. <checkbox>es should be unaffected.	TODO: when announcing release, link to explanation mail.
- Added GUI element for entering a set of options for an arbitrary number of items		TODO: document
- Reduce CPU usage of pluings while idle
- Fix conversion from Numeric to Factor in the data editor
- In the data.frame editor, columns containing invalid values are now highlighted in red
- Fixed: If none of the previous plugin maps could be found on startup, re-add the default
- Added GUI element for entering matrix or vector data in plugins
- Improve key handling while editing factor levels in a data.frame
- Added utiltity function rk.flush.output()
- RKWard is now categorized as Science/Math/Numerical Analysis in its .desktop file
- Fixed: Device history was not working with more recent versions of ggplot2 		(TODO: find out, which version broke it, exactly)
- Fixed: Option to include suggested packages in install was mis-labelled "install dependencies"
- rk.set.output.html.file() gains argument to allow addition of custom content to the html header

--- Version 0.6.0 - Oct-24-2012
- Fixed: Entering "0" as propabilities (quantiles) vector in distribution plugins would cause error message
- Preview device windows will display some status information (most importantly, warnings or errors)
- Most plot plugins gain options to control margins and tick label orientation
- Added option for installing packages from source (implicitly enabled on Unixoid platforms)
- Fixed: Wrong handling of carriage returns ('\r') in the console window
- Fixed: Spinboxes had wrong initial values